--- a/SidebarMenu/Base.lproj/Main.storyboard
+++ b/SidebarMenu/Base.lproj/Main.storyboard
@@ -1070,11 +1070,11 @@
                                         <rect key="frame" x="0.0" y="22" width="414" height="89"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MTg-Y3-tvG" id="dHK-ta-eP1">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="88.666666666666671"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="89"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Cl2-u1-HAV">
-                                                    <rect key="frame" x="15" y="0.0" width="384" height="88.666666666666671"/>
+                                                    <rect key="frame" x="15" y="0.0" width="384" height="89"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -1089,23 +1089,93 @@
                                     <outlet property="delegate" destination="Uuo-s6-4OZ" id="kbr-2q-IMs"/>
                                 </connections>
                             </tableView>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="DZg-LP-Dyu" userLabel="Assigned_Unassigned">
-                                <rect key="frame" x="121" y="664" width="173" height="32"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="ron-cr-J3q">
+                                <rect key="frame" x="87" y="601" width="240" height="81"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h50-b4-gP7">
-                                        <rect key="frame" x="0.0" y="0.0" width="67" height="32"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                        <state key="normal" title="Assigned">
-                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qFO-J3-y0H">
-                                        <rect key="frame" x="87" y="0.0" width="86" height="32"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                        <state key="normal" title="Unassigned">
-                                            <color key="titleColor" red="0.96862745100000003" green="0.56470588239999997" blue="0.27058823529999998" alpha="1" colorSpace="calibratedRGB"/>
-                                        </state>
-                                    </button>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="-3" translatesAutoresizingMaskIntoConstraints="NO" id="gOl-sR-llY" userLabel="All">
+                                        <rect key="frame" x="0.0" y="0.0" width="60" height="81"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h50-b4-gP7">
+                                                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="60" id="LhW-eb-EX1"/>
+                                                    <constraint firstAttribute="height" constant="60" id="Xy5-6c-mUD"/>
+                                                </constraints>
+                                                <state key="normal" title="All" image="layers">
+                                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="allItemsButtonTapped:" destination="Uuo-s6-4OZ" eventType="touchUpInside" id="S2Q-eL-SVT"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="67p-q8-1SU">
+                                                <rect key="frame" x="0.0" y="57" width="60" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                <state key="normal" title="All">
+                                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="allItemsButtonTapped:" destination="Uuo-s6-4OZ" eventType="touchUpInside" id="460-AG-6We"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="-3" translatesAutoresizingMaskIntoConstraints="NO" id="Rfi-HE-zJs" userLabel="Assigned">
+                                        <rect key="frame" x="90" y="0.0" width="60" height="81"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gvy-9c-RTk">
+                                                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="60" id="1vo-Jp-M4f"/>
+                                                    <constraint firstAttribute="width" constant="60" id="dE8-TY-Uc1"/>
+                                                </constraints>
+                                                <state key="normal" title="Assigned" image="unlock">
+                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="assignedButtonTapped:" destination="Uuo-s6-4OZ" eventType="touchUpInside" id="3ik-75-5ZW"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gEb-tQ-DRp">
+                                                <rect key="frame" x="0.0" y="57" width="60" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                <state key="normal" title="Assigned">
+                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="assignedButtonTapped:" destination="Uuo-s6-4OZ" eventType="touchUpInside" id="087-Zt-zUj"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="-3" translatesAutoresizingMaskIntoConstraints="NO" id="CW8-Pm-2fc" userLabel="Unassigned">
+                                        <rect key="frame" x="180" y="0.0" width="60" height="81"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qFO-J3-y0H">
+                                                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="60" id="LFi-2t-bjh"/>
+                                                    <constraint firstAttribute="width" constant="60" id="Ulg-ft-KLj"/>
+                                                </constraints>
+                                                <state key="normal" title="Unassigned" image="padlock">
+                                                    <color key="titleColor" red="0.96862745100000003" green="0.56470588239999997" blue="0.27058823529999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="unAssignedButtonTapped:" destination="Uuo-s6-4OZ" eventType="touchUpInside" id="jOP-zQ-q5t"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kUi-SL-B3h">
+                                                <rect key="frame" x="0.0" y="57" width="60" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                <state key="normal" title="Unassigned">
+                                                    <color key="titleColor" red="0.96862745100000003" green="0.56470588239999997" blue="0.27058823529999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="unAssignedButtonTapped:" destination="Uuo-s6-4OZ" eventType="touchUpInside" id="82m-Aw-g2G"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                             </stackView>
                         </subviews>
@@ -1114,9 +1184,9 @@
                             <constraint firstItem="dRd-N9-5sE" firstAttribute="width" secondItem="2zx-Do-anI" secondAttribute="width" id="3kj-LH-Gu4"/>
                             <constraint firstItem="dRd-N9-5sE" firstAttribute="top" secondItem="rps-Fn-zLu" secondAttribute="bottom" id="CV3-tw-rpf"/>
                             <constraint firstAttribute="centerX" secondItem="dRd-N9-5sE" secondAttribute="centerX" id="Paz-jP-yHJ"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="DZg-LP-Dyu" secondAttribute="bottom" constant="40" id="iBE-dh-Fmd"/>
+                            <constraint firstItem="ron-cr-J3q" firstAttribute="centerX" secondItem="2zx-Do-anI" secondAttribute="centerX" id="epW-0i-FkD"/>
                             <constraint firstItem="fy6-r5-YBG" firstAttribute="top" secondItem="dRd-N9-5sE" secondAttribute="bottom" id="oZ9-4y-Qbs"/>
-                            <constraint firstItem="DZg-LP-Dyu" firstAttribute="centerX" secondItem="2zx-Do-anI" secondAttribute="centerX" id="szf-0q-9bB"/>
+                            <constraint firstItem="fy6-r5-YBG" firstAttribute="top" secondItem="ron-cr-J3q" secondAttribute="bottom" constant="10" id="z3A-rl-E06"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
@@ -1375,15 +1445,18 @@
         <image name="comments" width="1024" height="1024"/>
         <image name="envelope" width="128" height="100"/>
         <image name="home" width="256" height="256"/>
+        <image name="layers" width="256" height="256"/>
         <image name="map" width="1024" height="1024"/>
         <image name="menu" width="22" height="22"/>
         <image name="news" width="1024" height="1024"/>
+        <image name="padlock" width="256" height="256"/>
         <image name="password" width="20" height="22"/>
         <image name="phone" width="512" height="512"/>
         <image name="search-256" width="256" height="256"/>
         <image name="sports-car" width="256" height="256"/>
         <image name="tag" width="1024" height="1024"/>
         <image name="touch-id-icon" width="214" height="214"/>
+        <image name="unlock" width="256" height="256"/>
         <image name="username" width="20" height="19"/>
         <image name="wishlist" width="1024" height="1024"/>
     </resources>
